# Vela

./: .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  efficiency_improvement_plan.md  models.md  opencode.json  pyproject.toml
backend/: .e2e-playwright.db  .e2e-test-manual.db  .e2e-test-manual2.db  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth_schema.py  0002_github_oauth_identity.py  0003_user_library_constraints.py  0003_user_profile.py  0004_drop_images_table.py  0005_deploy_config_and_history.py  0006_email_preferences.py  0007_alert_history.py  0008_team_projects.py  0009_deployment_project_id.py  0010_organization_name_320.py  0011_user_profile.py  0012_scaling_policies.py  0013_scaling_stabilization.py
backend/app/: __init__.py  bootstrap_env.py  e2e_support.py
backend/app/api/: __init__.py  app.py  deps.py  errors.py  git_ops.py  route_wiring.py  schemas.py  user_view.py
backend/app/api/routes/: auth.py  builder.py  containers.py  deployments.py  dockerfile_templates.py  github.py  images.py  projects.py  saved_images.py  scaling.py  settings.py  traffic.py  users.py
backend/app/core/: __init__.py  builder.py  default_image_builder.py  deploy_source_display.py  deploy_source_suggestions.py  deployment_history.py  docker_orchestrator.py  enums.py  exceptions.py  fake_orchestrator.py  git_ops.py  git_source_analysis.py  image_not_found_payload.py  models.py  orchestrator.py  project_analysis.py  public_route_host.py  smoke.py  traefik_file_traffic_router.py  traffic_models.py  traffic_router.py  user_library.py  user_preferences.py
backend/app/core/auth/: __init__.py  passwords.py  service.py  tokens.py
backend/app/core/containers/: __init__.py  docker_orchestrator.py  fake_orchestrator.py  orchestrator.py  test_run.py  volume_uploads.py
backend/app/db/: __init__.py  base.py  engine.py  models.py
backend/tests/: conftest.py  test_api_integration.py  test_auth.py  test_brevo_email_provider.py  test_container_monitor.py  test_default_image_builder.py  test_deploy_epic.py  test_docker_orchestrator_env.py  test_docker_orchestrator_volumes.py  test_email_alerts.py  test_email_notification_settings.py  test_git_ops.py  test_git_source_analysis_context.py  test_github_oauth.py  test_health_check_defaults.py  test_models.py  test_noop_traffic_router.py  test_profile.py  test_project_analysis.py  test_project_container_access.py  test_projects_api.py  test_public_route_host.py  test_registry_image_suggestions.py  test_route_wiring.py  test_scaling_engine.py  test_traefik_file_traffic_router.py  test_user_library_api.py  test_volume_uploads.py
frontend/: .npmrc  (+11 more)
(+160 files in other folders)
