[project]
name = "vela"
version = "0.1.0"
description = "Container deployment platform — orchestrate, build, and manage containers from a single interface."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]
