[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "vela"
version = "0.1.0"
description = "Container deployment platform — orchestrate, build, and manage containers from a single interface."
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0,<8.0",
    "pydantic[email]>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "bcrypt>=4.0,<6.0",
    "pyjwt>=2.9,<3.0",
    "cryptography>=44,<46",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "aiosqlite>=0.20,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
